--------------------------------------------------------------------------------
 OSM2World 0.1.9                                                     ????-??-?? 
--------------------------------------------------------------------------------
 
 * correct rendering of covered ways through buildings, require tunnel=passage
 * keep camera position after reload (only works well with same bounding box)
 * correct aspect ratio depending on window dimensions
 * use Trove lib in PrimitiveBuffer, make buffering optional for PNG output
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.8                                                     2011-11-09 
--------------------------------------------------------------------------------
 
 * support for roof shapes (as ridge/edge geometry or building tags)
 * support for building parts
 * allow replacing POVRay textures and declarations in osm2world_definitions.inc
 * make elevation calculator configurable, default to ZeroElevationCalculator
 * bugfix in ForceEC. (duplicate points with ele) solves missing walls in POVRay
 * OBJ export can be split into multiple files
 * better minimum and maximum depths for orthographic view
 * configurable PNG output background color
 * support for entrance=*
 * statistics dialog in viewer
 * reload menu item in viewer
 * code improvements (configurable Targets, toString and isEmpty for OSM data)
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.7                                                     2011-09-19 
--------------------------------------------------------------------------------
 
 * viewer: add option to choose between different elevation calculation methods
 * new ZeroElevationCalculator that sets everything to elevation 0
 * new config option createTerrain to disable terrain calculation
 * use ele tags on invisible ways and areas
 * artificial nodes in ways for better terrain elevation