@@ -1,0 +1,138 @@
+package org.osm2world.core.world.modules;
+
+import static java.util.Collections.nCopies;
+import static org.osm2world.core.world.modules.common.WorldModuleGeometryUtil.createShapeExtrusionAlong;
+import static org.osm2world.core.world.modules.common.WorldModuleParseUtil.parseHeight;
+
+import java.util.List;
+
+import org.osm2world.core.map_data.data.MapElement;
+import org.osm2world.core.map_data.data.MapNode;
+import org.osm2world.core.map_data.data.MapWaySegment;
+import org.osm2world.core.map_elevation.data.GroundState;
+import org.osm2world.core.math.VectorXYZ;
+import org.osm2world.core.math.VectorXZ;
+import org.osm2world.core.target.RenderableToAllTargets;
+import org.osm2world.core.target.Target;
+import org.osm2world.core.target.common.material.Material;
+import org.osm2world.core.target.common.material.Materials;
+import org.osm2world.core.world.data.NoOutlineNodeWorldObject;
+import org.osm2world.core.world.modules.common.AbstractModule;
+import org.osm2world.core.world.network.AbstractNetworkWaySegmentWorldObject;
+
+/**
+ * module for power infrastructure
+ */
+public class PowerModule extends AbstractModule {
+	
+	@Override
+	protected void applyToNode(MapNode node) {
+		if (node.getTags().contains("power", "pole")) {
+			node.addRepresentation(new Powerpole(node));
+		}
+	}
+	
+	@Override
+	protected void applyToWaySegment(MapWaySegment segment) {
+		if (segment.getTags().contains("power", "minor_line")) {
+			segment.addRepresentation(new Powerline(segment));
+		}
+	}
+	
+	private static final class Powerpole extends NoOutlineNodeWorldObject
+			implements RenderableToAllTargets {
+		
+		public Powerpole(MapNode node) {
+			super(node);
+		}
+		
+		@Override
+		public double getClearingAbove(VectorXZ pos) {
+			return 0;
+		}
+		
+		@Override
+		public double getClearingBelow(VectorXZ pos) {
+			return 0;
+		}
+		
+		@Override
+		public GroundState getGroundState() {
+			return GroundState.ON;
+		}
+		
+		@Override
+		public MapElement getPrimaryMapElement() {
+			return node;
+		}
+		
+		@Override
+		public void renderTo(Target<?> target) {
+			
+			target.drawColumn(Materials.WOOD, null,
+					node.getElevationProfile().getWithEle(node.getPos()),
+					parseHeight(node.getTags(), 8f),
+					0.15, 0.15, false, true);
+			
+		}
+		
+	}
+	
+	private static class Powerline
+		extends AbstractNetworkWaySegmentWorldObject
+		implements RenderableToAllTargets {
+		
+		private static final float DEFAULT_THICKN = 0.1f; // width and height
+		private static final float DEFAULT_CLEARING_BL = 7.5f; // power pole height is 8
+		private static final Material material = Materials.STEEL;
+		
+		public Powerline(MapWaySegment segment) {
+			super(segment);
+		}
+		
+		@Override
+		public float getWidth() {
+			return DEFAULT_THICKN;
+		}
+		
+		@Override
+		public GroundState getGroundState() {
+			return GroundState.ON;
+		}
+		
+		@Override
+		public double getClearingAbove(VectorXZ pos) {
+			return 0;
+		}
+		
+		@Override
+		public double getClearingBelow(VectorXZ pos) {
+			//powerlines are currently treated as running on the ground for simplicity
+			return 0;
+		}
+		
+		@Override
+		public void renderTo(Target<?> target) {
+			
+			VectorXYZ[] wallShape = {
+				new VectorXYZ(-DEFAULT_THICKN/2, DEFAULT_CLEARING_BL, 0),
+				new VectorXYZ(-DEFAULT_THICKN/2, DEFAULT_CLEARING_BL + DEFAULT_THICKN, 0),
+				new VectorXYZ(+DEFAULT_THICKN/2, DEFAULT_CLEARING_BL + DEFAULT_THICKN, 0),
+				new VectorXYZ(+DEFAULT_THICKN/2, DEFAULT_CLEARING_BL, 0)
+			};
+			
+			List<VectorXYZ> path =
+				line.getElevationProfile().getPointsWithEle();
+			
+			List<VectorXYZ[]> strips = createShapeExtrusionAlong(wallShape,
+					path, nCopies(path.size(), VectorXYZ.Y_UNIT));
+			
+			for (VectorXYZ[] strip : strips) {
+				target.drawTriangleStrip(material, strip);
+			}
+			
+		}
+		
+	}
+	
+}
